# windev_training

./: .gitignore  .gitmodules  GETTING_STARTED.md  README.md  _clean.bat
advanced-io/: README.md
boot-process/: README.md
com-winrt/: README.md
development-environment/: README.md
development-environment/catch2-unit-test/: CMakeLists.txt  README.md
development-environment/catch2-unit-test/src/: main.cpp  utils.cpp  utils.hpp
development-environment/catch2-unit-test/test/: CMakeLists.txt  catch_main.cpp  tests.cpp
dotnet/: README.md
error-handling/: README.md
interprocess-communication/: README.md
introduction/: README.md
io-subsystem/: README.md
jobs/: README.md  Source.cpp  job.txt
kernel-development/: README.md
kernel-security-mitigations/: README.md
kernel-synchronization/: README.md
libraries/: README.md
loading-and-execution/: README.md
management-mechanisms/: README.md
memory-heap/: README.md
memory-mapped-files/: README.md
memory-subsystem/: README.md
memory-virtual/: README.md
networking/: README.md
object-manager/: README.md
objects-and-handles/: README.md
pe-execution/: README.md
pe-format/: README.md
processes/: README.md
security-model/: README.md
services/: README.md
strings-and-text/: README.md
system-architecture/: README.md
system-service-dispatching/: README.md
templates/: EXERCISE_TEMPLATE.md  TOPIC_TEMPLATE.md
threads/: README.md  Source.cpp  threads.txt
user-io/: README.md
user-security-mitigations/: README.md
user-synchronization/: README.md
virtualization/: README.md
(+90 files in other folders)
